tests/ui/wait-for-position.goml
// This test ensures that the `wait-for-position` command is behaving like expected.
screenshot-comparison: false
go-to: "file://" + |CURRENT_DIR| + "/" + |DOC_PATH| + "/elements.html"
set-timeout: 500
// Shouldn't wait here since it's already the case.
wait-for-position: ("#js-change-pos", {"x": 543, "y": 88})
//~^ ERROR: [different X values: 585.34375 (or 585) != 543]
click: "#js-change-pos"
// Should wait for 250ms here.
wait-for-position: ("#js-change-pos", {"x": 546})
//~^ ERROR: [different X values: 588.34375 (or 588) != 546]
// We reset the "y" position:
set-css: ("#js-change-pos", {"margin-top": "0"})
click: "#js-change-pos"
// Should wait for 250ms here.
wait-for-position: ("#js-change-pos", {"y": 91}, ALL)
wait-for-position: ("#js-change-pos", {"y": 16})
//~^ ERROR: [different Y values: 91 (or 91) != 16]
// We ensure that it still runs commands after failing:
assert-position: ("#js-change-pos", {"y": 16})
//~^ ERROR: [different Y values: 91 (or 91) != 16]
